# astral-desktop-test

./: .gitignore  AGENTS.md  Cargo.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: release.yml
crates/tunnel-core/: Cargo.toml
crates/tunnel-core/src/: client.rs  credentials.rs  dialer.rs  lib.rs  ws_stream.rs
docs/developer/: releases.md
docs/tasks-todo/: task-1-clerk-auth-and-relay.md  task-2-deploy-and-onboarding.md
locales/: en.json  fr.json
scripts/: prepare-release.js
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  oauth-popup.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  control_plane.rs  credential_store.rs  lib.rs  main.rs  network_runtime.rs  network_watcher.rs  state.rs  tray.rs
src/components/auth/: SSOCallback.tsx  SignInForm.test.tsx  SignInForm.tsx
src/components/titlebar/: TitleBar.tsx  TunnelTitleBar.tsx
src/lib/: bindings.ts  constants.ts  menu.ts
src/test/: setup.ts
